log/Untitled-2.txt
FAILED: platforms/nuttx/src/px4/common/CMakeFiles/px4_layer.dir/cpuload.cpp.obj 
/usr/bin/arm-none-eabi-g++  -DCONFIG_ARCH_BOARD_FLYWOO_F405S_AIO -DCONSTRAINED_FLASH -DCONSTRAINED_FLASH_NO_HELP=\"https://docs.px4.io/main/en/modules/modules_main.html\" -DCONSTRAINED_MEMORY -D_SYS_CDEFS_H_ -D_SYS_REENT_H_ -D__CUSTOM_FILE_IO__ -D__PX4_NUTTX -D__STDC_FORMAT_MACROS -I../../boards/flywoo/f405s_aio/src -I../../platforms/nuttx/src/px4/common/include -I. -Isrc/lib -I../../platforms/nuttx/src/px4/stm/stm32f4/include -I../../platforms/common -I../../platforms/common/include -I../../src -I../../src/include -I../../src/lib -I../../src/lib/matrix -I../../src/modules -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/armv7-m -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/chip -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/common -I../../platforms/nuttx/NuttX/apps/include -Iexternal/Install/include -isystem ../../platforms/nuttx/NuttX/include/cxx -isystem ../../platforms/nuttx/NuttX/nuttx/include/cxx -isystem ../../platforms/nuttx/NuttX/nuttx/include -mcpu=cortex-m4 -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard -Os -DNDEBUG   -g -fdata-sections -ffunction-sections -fomit-frame-pointer -fmerge-all-constants -fno-signed-zeros -fno-trapping-math -freciprocal-math -fno-math-errno -fno-strict-aliasing -fvisibility=hidden -include visibility.h -Wall -Wextra -Werror -Warray-bounds -Wcast-align -Wdisabled-optimization -Wdouble-promotion -Wfatal-errors -Wfloat-equal -Wformat-security -Winit-self -Wlogical-op -Wpointer-arith -Wshadow -Wuninitialized -Wunknown-pragmas -Wunused-variable -Wno-missing-field-initializers -Wno-missing-include-dirs -Wno-unused-parameter -fdiagnostics-color=always -fno-builtin-printf -fno-strength-reduce -Wformat=1 -Wunused-but-set-variable -Wno-format-truncation -fcheck-new -Wreorder -Wno-overloaded-virtual -fno-rtti -fno-exceptions -fno-sized-deallocation -fno-threadsafe-statics -nostdinc++ -std=gnu++14 -MD -MT platforms/nuttx/src/px4/common/CMakeFiles/px4_layer.dir/cpuload.cpp.obj -MF platforms/nuttx/src/px4/common/CMakeFiles/px4_layer.dir/cpuload.cpp.obj.d -o platforms/nuttx/src/px4/common/CMakeFiles/px4_layer.dir/cpuload.cpp.obj -c ../../platforms/nuttx/src/px4/common/cpuload.cpp
../../platforms/nuttx/src/px4/common/cpuload.cpp:162:1: error: expected unqualified-id before '{' token
  162 | {
      | ^
compilation terminated due to -Wfatal-errors.
[323/765] Building CXX object src/lib/.../mixer_module.dir/mixer_module.cpp.obj
ninja: build stopped: subcommand failed.
make: *** [Makefile:227: flywoo_f405s_aio_default] Error 1
